# gandur

./: .gitignore  CMakeLists.txt  Makefile  README.md  arapaho.cpp  arapaho.hpp  gandur  gandur.conf  gandur.cpp  gandur.hpp  imgdet.cpp  main.cpp  viddet.cpp
examples/: Http_server.cpp  Http_server.hpp  box.cpp  changeClass.cpp  crop.cpp  imgdet.cpp  imgdet.hpp  main.cpp  small.cpp  stream.cpp  trainlist.cpp  validate.cpp  validate1.cpp  validateT.cpp  videt.cpp
